--- a/part3/phonebook/src/App.css
+++ b/part3/phonebook/src/App.css
@@ -1,23 +1,43 @@
-.App {
-  text-align: center;
+body {
+    display: flex;
+    flex-direction: column;
+    background-color: aliceblue;
+    justify-content: flex-start;
+    text-align: center;
+    font-family: 'Segoe UI', 'Roboto', 'Oxygen', sans-serif;
 }
 
-.successful {
-  color: green;
-  background: lightgrey;
-  font-size: 20px;
-  border-style: solid;
-  border-radius: 5px;
-  padding: 10px;
-  margin-bottom: 10px;
+p {
+    font-weight: bold;
+}
+  
+code {
+    font-family: 'Courier New', monospace;
+}
+  
+img {
+    margin: 20px;
+    background-color: white;
+    border: 2px solid;
+    border-color: rgb(162, 185, 207);
+    border-radius: 10px;
+    padding: 10px;
 }
 
-.error {
-  color: red;
-  background: lightgrey;
-  font-size: 20px;
-  border-style: solid;
-  border-radius: 5px;
-  padding: 10px;
-  margin-bottom: 10px;
+.main-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    background-color: rgb(200, 218, 233);
+    border: 5px solid;
+    border-color: rgb(111, 137, 160);;
+    border-radius: 20px;
+    padding: 10px;
+}
+
+input {
+    box-sizing: border-box;
+    padding: 5px;
+    margin: 5px;
+    border-radius: 5px;
 }
